erDiagram
    PAIS ||--o{ PRODUCTOPAIS : regula
    CATEGORIA ||--o{ PRODUCTOBASE : clasifica
    PRODUCTOBASE ||--o{ PRODUCTOPAIS : habilita
    PRODUCTOPAIS ||--o{ REQUISITOPRODUCTOPAIS : exige
    REQUISITOLEGAL ||--o{ REQUISITOPRODUCTOPAIS : define
    PROVEEDOR ||--o{ IMPORTACION : abastece
    IMPORTACION ||--o{ IMPORTACIONDETALLE : contiene
    PRODUCTOBASE ||--o{ IMPORTACIONDETALLE : costea
    IMPORTACIONDETALLE ||--o{ LOTEINVENTARIO : crea
    LOTEINVENTARIO ||--o{ MOVIMIENTOSINVENTARIO : registra
    IMPORTACION ||--o{ COSTOSIMPORTACION : acumula
    PAIS ||--o{ ORDENABASTECIMIENTO : destino
    ORDENABASTECIMIENTO ||--o{ ORDENABASTECIMIENTODETALLE : solicita
    PRODUCTOBASE ||--o{ ORDENABASTECIMIENTODETALLE : demanda
    ORDENABASTECIMIENTODETALLE ||--o{ ETIQUETADOMARCA : etiqueta
    PAIS ||--o{ TIPOCAMBIO : cotiza
